objects/Duplicate_Group__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Duplicate Groups</relationshipLabel>
        <relationshipName>Duplicate_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMaster__c</fullName>
        <label>isMaster</label>
        <length>1</length>
        <type>Text</type>
    </fields>
</CustomObject>